// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Box /> accepts a center prop 1`] = `
.hFAqso {
  color: unset;
  font-size: unset;
  margin: unset;
  text-align: center;
}

<div
  className="sc-bdVaJa hFAqso"
  color="unset"
  size="unset"
/>
`;

exports[`<Box /> accepts a margin prop 1`] = `
.iiuGpn {
  color: unset;
  font-size: unset;
  margin: 0;
  text-align: left;
}

<div
  className="sc-bdVaJa iiuGpn"
  color="unset"
  size="unset"
/>
`;

exports[`<Box /> accepts a size prop 1`] = `
.cIyoJg {
  color: unset;
  font-size: 12px;
  margin: unset;
  text-align: left;
}

<div
  className="sc-bdVaJa cIyoJg"
  color="unset"
  size="12px"
/>
`;

exports[`<Box /> renders correctly 1`] = `
.cUSeWp {
  color: unset;
  font-size: unset;
  margin: unset;
  text-align: left;
}

<div
  className="sc-bdVaJa cUSeWp"
  color="unset"
  size="unset"
/>
`;
